--- a/old/index.html
+++ b/old/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>경진이의 포트폴리오</title>
   <link rel="stylesheet" href="./css/style.css" />
   <script src="./js/library/gsap.min.js"></script>
   <script src="./js/library/scrollTriger.min.js"></script>
@@ -37,82 +37,46 @@
         <div class="scrolldown-lottie"></div>
       </div>
     </section>
-
-    <section class="intro">
-      <div class="inner">
-        <div class="intro-wrap">
-          <div class="intro-sub">
-            <h3 class="intro-title">Introduce My SELF</h3>
-            <span class="intro-name">Kim Kyoung Jin</span>
-            <span class="intro-dob"> 28 Feb 1995</span>
-          </div>
-          <div class="intro-link">
-            <span class="github-link">
-              <a target="_blank" href="https://github.com/d2nst">
-                <span>Github</span>
-                <!-- 모바일 <img src="/"> -->
-              </a>
-            </span>
-            <span class="mail-link">
-              <a target="_blank" href="mailto:wlsdl950@gmail.com">
-                <span>Mail</span>
-                <!-- 모바일 <img src=" /"> -->
-              </a>
-            </span>
-          </div>
-        </div>
-        <div class="intro-desc">
-          <p>
-            머릿속 아이디어가 화면에 구현될 때의 성취감이 저를 퍼블리셔의 길로 이끌었습니다.
-            <strong class="word-st">사용자에게 최고의 경험을 선사</strong>하기 위해 디자인을 코드로 완성하며, 디테일한 부분까지 놓치지 않고 최선의 결과를 추구합니다.
-          </p>
-          <p>
-            늘 새로움을 탐험하며, 즐거운 아이디어를 발견하고, 더 나은 경험을 만들기 위해 한 걸음 더 나아갑니다.
-            트렌드를 놓치지 않고 발 빠르게 적용하며, 문제를 해결하기 위해 적극적으로 소통하고 협업합니다.
-          </p>
-        </div>
-
-      </div>
-    </section>
-    ₩
     <section class="information">
-      <div class="inner">
-        <div class="info-career">
+      <div class="container d-flex">
+        <div class="info-about">
           <img src="./assets/images/d2n.png" alt="프로필 이미지" class="info-img" />
+          <p class="info-desc">
+            머릿속 아이디어가 화면에 구현될 때의 성취감이 저를 퍼블리셔의 길로 이끌었습니다.
+            사용자에게 최고의 경험을 선사하기 위해 디자인을 코드로 완성하며,
+            디테일한 부분까지 놓치지 않고 최선의 결과를 추구합니다.
+            <br>
+            <br>
+            늘 새로움을 탐험하며, 즐거운 아이디어를 발견하고,
+            더 나은 경험을 만들기 위해 한 걸음 더 나아갑니다.
+            앞으로도 창의적인 모험가로서, 끊임없이 도전하며 성장하겠습니다.
+          </p>
+        </div>
+
+        <!-- 오른쪽: 경력 사항 -->
+        <div class="info-career">
           <ul class="career-list">
             <li class="career-item">
-              <h3 class="career-title">경력</h3>
+              <h4 class="career-company">경력</h4>
               <span class="career-date">2023.09.01 - 현재</span>
               <h4 class="career-company">(주)포엔</h4>
               <span class="career-role">S/W Biz팀 - 웹퍼블리싱 및 프론트엔드</span>
               <ul class="project-list">
-                <li>배터리 재제조 이력시스템
-                  <ul>
-                    <li>재제조현황 대시보드 화면 구현</li>
-                    <li>화면 유지보수</li>
-                    <li>반응형 작업</li>
-                  </ul>
-                </li>
-                <li>배터리 진단 시스템
-                  <ul>
-                    <li> 기획 및 데모 사이트 디자인 퍼블리싱</li>
-                    <li>프로젝트 WBS 작성 및 업체 선정 및 조율 계약 연락</li>
-                    <li>현재 테스트 중. 2025년 하반기 배포 예정</li>
-                  </ul>
-                </li>
-                <li>사내 홈페이지 디자인 및 유지보수</li>
+                <li>배터리 재제조 이력시스템 구축</li>
+                <li>재제조현황 대시보드 화면 구현</li>
+                <li>재제조현황 대시보드 화면 구현</li>
               </ul>
             </li>
             <li class="career-item">
-              <h3 class="career-title">자격증</h3>
+              <h4 class="career-company">자격증</h4>
               <ul class="project-list">
                 <li>GTQ 1급</li>
                 <li>웹디자인자격증</li>
               </ul>
             </li>
             <li class="career-item">
-              <h3 class="career-title">교육</h3>
               <span class="career-date">2022.01.01 - 2023.08.31</span>
+              <h4 class="career-company">교육</h4>
               <span class="career-role">UI/UX 퍼블리싱</span>
               <ul class="project-list">
                 <li>라인컴퓨터 아카데미</li>
@@ -122,14 +86,11 @@
         </div>
       </div>
     </section>
-
     <section class="project">
       <div class="container"></div>
     </section>
-
     <section class="contact"></section>
   </main>
-
 </body>
 
 </html>
