--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="visual-introwrap">
           <ul class="visual-list">
             <li class="list-item">web</li>
-            <li class="list-item">front</li>
+            <li class="list-item">publisher</li>
             <li class="list-item">kimgkyoungjin</li>
           </ul>
           <div class="visual-imgwrap">
@@ -42,7 +42,7 @@
       <div class="inner">
         <div class="intro-wrap">
           <div class="intro-sub">
-            <h3 class="intro-title">Introduce My SELF</h3>
+            <h3 class="intro-title">Introduce My Self</h3>
             <span class="intro-name">Kim Kyoung Jin</span>
             <span class="intro-dob"> 28 Feb 1995</span>
           </div>
@@ -74,9 +74,10 @@
 
       </div>
     </section>
-    ₩
+
     <section class="information">
       <div class="inner">
+        <h2 class="info">Info</h2>
         <div class="info-career">
           <img src="./assets/images/d2n.png" alt="프로필 이미지" class="info-img" />
           <ul class="career-list">
@@ -87,20 +88,21 @@
               <span class="career-role">S/W Biz팀 - 웹퍼블리싱 및 프론트엔드</span>
               <ul class="project-list">
                 <li>배터리 재제조 이력시스템
-                  <ul>
-                    <li>재제조현황 대시보드 화면 구현</li>
-                    <li>화면 유지보수</li>
-                    <li>반응형 작업</li>
+                  <ul class="list-item">
+                    <li> - 재제조현황 대시보드 화면 구현</li>
+                    <li> - 화면 유지보수</li>
+                    <li> - 반응형 작업</li>
                   </ul>
                 </li>
                 <li>배터리 진단 시스템
-                  <ul>
-                    <li> 기획 및 데모 사이트 디자인 퍼블리싱</li>
-                    <li>프로젝트 WBS 작성 및 업체 선정 및 조율 계약 연락</li>
-                    <li>현재 테스트 중. 2025년 하반기 배포 예정</li>
+                  <ul class="list-item">
+                    <li> - 기획 및 데모 사이트 디자인 퍼블리싱</li>
+                    <li> - 프로젝트 WBS 작성 및 업체 선정 및 조율 계약 연락</li>
+                    <li> - 현재 테스트 중. 2025년 하반기 배포 예정</li>
                   </ul>
                 </li>
-                <li>사내 홈페이지 디자인 및 유지보수</li>
+                <li> - 데이터 분석 자동화 웹사이트 기획 및 UI 정의</li>
+                <li> - 사내 홈페이지 디자인 및 유지보수</li>
               </ul>
             </li>
             <li class="career-item">
