--- a/index.html
+++ b/index.html
@@ -1,137 +1,430 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <link rel="stylesheet" href="./css/style.css" />
-  <script src="./js/library/gsap.min.js"></script>
-  <script src="./js/library/scrollTriger.min.js"></script>
-  <script src="./js/library/lottie.min.js"></script>
-  <script src="./js/main.js" defer></script>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="Keywords" content="Web, html, 웹 표준, 포트폴리오" />
+	<meta name="Author" content="김경진" />
+	<title>포트폴리오 | 웹퍼블리셔 김경진</title>
+
+	<!-- favicon -->
+	<!-- CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+	<link rel="stylesheet" href="./css/style.css" />
+	<link rel="stylesheet" href="./css/responsive.css" />
+
+	<!-- JS -->
+	<script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+	<script src="./js/library/gsap.min.js"></script>
+	<script src="./js/library/scrollTriger.min.js"></script>
+	<script src="./js/library/lottie.min.js"></script>
+	<script defer src="js/main.js"></script>
 </head>
 
 <body>
-  <main class="portfolio-container">
-    <section class="hero">
-      <div class="visual">
-        <div class="visual-titlewrap">
-          <p class="visual-yeartxt">2022</p>
-          <h2 class="visual-title">PUBLISHER</h2>
-          <p class="visual-yeartxt current">2025</p>
-        </div>
-        <div class="visual-introwrap">
-          <ul class="visual-list">
-            <li class="list-item">web</li>
-            <li class="list-item">publisher</li>
-            <li class="list-item">kimgkyoungjin</li>
-          </ul>
-          <div class="visual-imgwrap">
-            <p class="visual-desc">
-              <span class="visual-txt1">새로움을</span> 찾아다니는 <br> 모험가 <strong class="myname">김경진</strong> 입니다.
-            </p>
-            <img src="./assets/images/5.png" alt="프로필 사진" class="profile-img" />
-          </div>
-        </div>
-        <div class="scrolldown-lottie"></div>
-      </div>
-    </section>
+	<!-- E:HEADER -->
+	<main class="portfolio-container">
+		<section class="hero">
+			<div class="visual">
+				<div class="visual-titlewrap">
+					<p class="visual-yeartxt">2022</p>
+					<h2 class="visual-title">PUBLISHER</h2>
+					<p class="visual-yeartxt current">2025</p>
+				</div>
+				<div class="visual-introwrap">
+					<ul class="visual-list">
+						<li class="list-item">web</li>
+						<li class="list-item">publisher</li>
+						<li class="list-item">kimkyoungjin</li>
+					</ul>
+					<div class="visual-imgwrap">
+						<p class="visual-desc">
+							<span class="visual-txt1">새로움을</span> 찾아다니는 <br />
+							모험가 <strong class="myname">김경진</strong> 입니다.
+						</p>
+						<img src="./assets/images/profile.png" alt="프로필 사진" class="profile-img" />
+					</div>
+				</div>
+				<div class="scrolldown-lottie"></div>
+			</div>
+		</section>
+		<!-- E:hero -->
+		<section class="intro">
+			<div class="inner">
+				<div class="intro-wrap">
+					<div class="intro-sub">
+						<h3 class="intro-title">Introduce My Self</h3>
+						<span class="intro-name">Kim Kyoung Jin</span>
+						<span class="intro-dob"> 28 Feb 1995</span>
+					</div>
+					<div class="intro-link">
+						<span class="github-link">
+							<a target="_blank" href="https://github.com/d2nst">
+								<span>Github</span>
+								<!-- 모바일 <img src="/"> -->
+							</a>
+						</span>
+						<span class="mail-link">
+							<a target="_blank" href="mailto:wlsdl950@gmail.com">
+								<span>Mail</span>
+								<!-- 모바일 <img src=" /"> -->
+							</a>
+						</span>
+					</div>
+				</div>
+				<div class="intro-desc">
+					<p>
+						머릿속 아이디어가 화면에 구현될 때의 성취감이 저를 퍼블리셔의 길로 이끌었습니다.
+						<strong class="word-st">사용자에게 최고의 경험을 선사</strong>하기 위해 디자인을 코드로 완성하며, 디테일한 부분까지 놓치지 않고 최선의 결과를 추구합니다.
+					</p>
+					<p>늘 새로움을 탐험하며, 즐거운 아이디어를 발견하고, 더 나은 경험을 만들기 위해 한 걸음 더 나아갑니다. 트렌드를 놓치지 않고 발 빠르게 적용하며, 문제를 해결하기 위해 적극적으로 소통하고
+						협업합니다.</p>
+				</div>
+			</div>
+		</section>
+		<!-- E:intro -->
+		<section class="about">
+			<div class="inner">
+				<div class="about-left">
+					<h3 class="about-title">About ME!</h3>
+				</div>
+				<div class="career-box">
+					<div class="career">
+						<ul class="career-list">
+							<li class="career-item">
+								<h3 class="career-title">경력</h3>
+								<span class="career-date">2023.09.01 - 현재</span>
+								<h4 class="career-company">(주)포엔</h4>
+								<span class="career-role">S/W Biz팀 - 웹퍼블리싱 및 프론트엔드</span>
+								<ul class="list">
+									<li class="list-title">
+										배터리 재제조 이력시스템
+										<ul class="list-item">
+											<li>- 재제조현황 대시보드 화면 구현</li>
+											<li>- 화면 유지보수</li>
+											<li>- 반응형 작업</li>
+										</ul>
+									</li>
+									<li class="list-title">
+										배터리 진단 시스템
+										<ul class="list-item">
+											<li>- 기획 및 데모 사이트 디자인 퍼블리싱</li>
+											<li>- 프로젝트 WBS 작성 및 업체 선정 및 조율 계약 연락</li>
+											<li>- 현재 테스트 중. 2025년 하반기 배포 예정</li>
+										</ul>
+									</li>
+									<li class="list-title">데이터 분석 자동화 웹사이트 기획 및 UI 정의</li>
+									<li class="list-title">사내 홈페이지 디자인 및 유지보수</li>
+								</ul>
+							</li>
 
-    <section class="intro">
-      <div class="inner">
-        <div class="intro-wrap">
-          <div class="intro-sub">
-            <h3 class="intro-title">Introduce My Self</h3>
-            <span class="intro-name">Kim Kyoung Jin</span>
-            <span class="intro-dob"> 28 Feb 1995</span>
-          </div>
-          <div class="intro-link">
-            <span class="github-link">
-              <a target="_blank" href="https://github.com/d2nst">
-                <span>Github</span>
-                <!-- 모바일 <img src="/"> -->
-              </a>
-            </span>
-            <span class="mail-link">
-              <a target="_blank" href="mailto:wlsdl950@gmail.com">
-                <span>Mail</span>
-                <!-- 모바일 <img src=" /"> -->
-              </a>
-            </span>
-          </div>
-        </div>
-        <div class="intro-desc">
-          <p>
-            머릿속 아이디어가 화면에 구현될 때의 성취감이 저를 퍼블리셔의 길로 이끌었습니다.
-            <strong class="word-st">사용자에게 최고의 경험을 선사</strong>하기 위해 디자인을 코드로 완성하며, 디테일한 부분까지 놓치지 않고 최선의 결과를 추구합니다.
-          </p>
-          <p>
-            늘 새로움을 탐험하며, 즐거운 아이디어를 발견하고, 더 나은 경험을 만들기 위해 한 걸음 더 나아갑니다.
-            트렌드를 놓치지 않고 발 빠르게 적용하며, 문제를 해결하기 위해 적극적으로 소통하고 협업합니다.
-          </p>
-        </div>
+							<li class="career-item">
+								<h3 class="career-title">자격증</h3>
+								<ul class="list-item">
+									<li>- GTQ 1급</li>
+									<li>- 웹디자인자격증</li>
+								</ul>
+							</li>
 
-      </div>
-    </section>
+							<li class="career-item">
+								<h3 class="career-title">교육</h3>
+								<span class="career-date">2022.01.01 - 2023.08.31</span>
+								<h4 class="career-company">라인컴퓨터 아카데미</h4>
+								<span class="career-role">UI/UX 퍼블리싱</span>
+								<ul class="list-item">
+									<li>- UI/UX디자인 및 구현</li>
+									<li>- 포토샵, 일러스트, Adobe XD의 디자인 툴을 사용하여 레이아웃 디자인</li>
+									<li>- 부트스트랩과 css 라이브러리 사용</li>
+									<li>- git, github 이해 및 세팅</li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- E:INTRODUCE -->
+		<section class="portfolio">
+			<div class="inner">
+				<div class="portfolio-top">
+					<h3 class="portfolio-title">Project</h3>
+				</div>
+				<div class="fp-auto-height">
+					<div class="project">
+						<div class="publishing_contents">
+							<p class="category">RESPONSIVE WEBSITE [PC, MOB]</p>
+							<h3>Minimal Goods</h3>
+							<p>
+								Gsap을 이용하여 만든 페이지입니다.<br />
+								다채로운 애니메이션을 구현하였고 반응형으로 제작했습니다.
+							</p>
+							<p class="progress">퍼블리싱 90% | 2인 제작</p>
+							<div class="lang">
+								<span class="lang-color h">html</span>
+								<span class="lang-color c">css</span>
+								<span class="lang-color js">js</span>
+							</div>
+							<div class="btn-group">
+								<div class="btn website">
+									<a href="https://d2nst.github.io/minimal-site/" target="_blank">website</a>
+								</div>
+								<div class="btn demo">
+									<a href="https://minimal-goods.webflow.io/" target="_blank">demo</a>
+								</div>
+								<div class="btn popup">
+									<button class="more__btn" data-modal-id="myModal1">more</button>
+								</div>
+							</div>
+						</div>
+						<div class="publishing_img">
+							<img src="./assets/images/portfolio_1.png" alt="퍼블리싱 프로젝트1" />
+						</div>
+					</div>
+					<div class="project">
+						<div class="publishing_contents">
+							<p>RESPONSIVE WEBSITE [PC, MOB]</p>
+							<h3>SKINFOOD</h3>
+							<p>
+								스킨푸드 홈페이지 리디자인<br />
+								총 5페이지 디자인, 퍼블리싱 진행했습니다.
+							</p>
+							<p class="progress">디자인 100% | 퍼블리싱 100%</p>
+							<div class="lang">
+								<span class="lang-color h">html</span>
+								<span class="lang-color c">css</span>
+								<span class="lang-color js">js</span>
+							</div>
+							<div class="btn-group">
+								<div class="btn website">
+									<a href="https://d2nst.github.io/theskinfood/" target="_blank">website</a>
+								</div>
+								<div class="btn design">
+									<a href="https://xd.adobe.com/view/c71f5841-7557-408a-ae54-8fe524f7e683-924c/grid"
+										target="_blank">design</a>
+								</div>
+								<div class="btn popup">
+									<button class="more__btn" data-modal-id="myModal2">more</button>
+								</div>
+							</div>
+						</div>
+						<div class="publishing_img">
+							<img src="./assets/images/portfolio_2.png" alt="퍼블리싱 프로젝트1" />
+						</div>
+					</div>
+					<div class="project">
+						<div class="publishing_contents">
+							<p class="category">ADAPTIVE WEBSITE [PC]</p>
+							<h3>Minimal Style</h3>
+							<p>
+								디자인 데모 사이트를 참고하여 퍼블리싱 했습니다.<br />
+								gsap, jarallax 등 동적인 요소의 라이브러리를 사용했습니다.<br />
+							</p>
+							<p class="progress">퍼블리싱 100%</p>
+							<div class="lang">
+								<span class="lang-color h">html</span>
+								<span class="lang-color c">css</span>
+								<span class="lang-color js">js</span>
+							</div>
+							<div class="btn-group">
+								<div class="btn website">
+									<a href="https://d2nst.github.io/minimal-style-site/" target="_blank">website</a>
+								</div>
+								<div class="btn demo">
+									<a href="https://untree.co/demos/style" target="_blank">demo</a>
+								</div>
+								<div class="btn popup">
+									<button class="more__btn" data-modal-id="myModal3">more</button>
+								</div>
+							</div>
+						</div>
+						<div class="publishing_img">
+							<img src="./assets/images/portfolio_3.png" alt="퍼블리싱 프로젝트2" />
+						</div>
+					</div>
+					<div class="project">
+						<div class="publishing_contents">
+							<p class="category">RESPONSIVE WEBSITE [PC, MOB]</p>
+							<h3>1st PORTFOLIO</h3>
+							<p>
+								첫번째 저의 포트폴리오 입니다. <br />
+								부트스트랩을 사용하여 반응형이 가능하도록 만들었습니다.
+							</p>
+							<p class="progress">디자인 100% | 퍼블리싱 100%</p>
+							<div class="lang">
+								<span class="lang-color h">html</span>
+								<span class="lang-color c">css</span>
+								<span class="lang-color js">js</span>
+							</div>
+							<div class="btn-group">
+								<div class="btn website">
+									<a href="https://d2nst.github.io/web-portfolio/" target="_blank">website</a>
+								</div>
+								<div class="btn popup">
+									<button class="more__btn" data-modal-id="myModal4">more</button>
+								</div>
+							</div>
+						</div>
+						<div class="publishing_img">
+							<img src="./assets/images/portfolio_4.png" alt="퍼블리싱 프로젝트3" />
+						</div>
+					</div>
+					<div class="project">
+						<div class="publishing_contents">
+							<p class="category">RESPONSIVE WEBSITE [PC, MOB]</p>
+							<h3>Movie Search Site</h3>
+							<p>
+								Vue3를 이용하여 만든 사이트로,<br />
+								OMDB웹사이트 API를 가져와 영화정보 사이트를 만들었습니다.
+							</p>
+							<p class="progress">Vue3 | clone coding</p>
+							<div class="lang">
+								<span class="lang-color v">vue3</span>
+								<span class="lang-color s">scss</span>
+								<span class="lang-color js">js</span>
+							</div>
+							<div class="btn-group">
+								<div class="btn website">
+									<a href="https://vue3-serach-movie.netlify.app/" target="_blank">website</a>
+								</div>
+								<div class="btn popup">
+									<button class="more__btn" data-modal-id="myModal5">more</button>
+								</div>
+							</div>
+						</div>
+						<div class="publishing_img">
+							<img src="./assets/images/portfolio_5.png" alt="퍼블리싱 프로젝트4" />
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- E:PORTFOLIO -->
+			<div class="overlay">
+				<div class="modal__wrap" id="myModal1">
+					<div class="modal__body">
+						<h2>Minimal Goods</h2>
+						<div class="modal__content">
+							<ul>
+								<li>js라이브러리 <em>gsap - ScrollTrigger</em>를 사용하여 구현한 페이지입니다.</li>
+								<li>
+									<em>git 협업</em>을 경험하기 위하여 팀원 1명과 총 2인으로 제작하였고<br />
+									브랜치를 생성하여 각 브랜치에서 작업 진행, pull과 merge를 통한 깃 협업 경험을 하게 되었습니다.
+								</li>
+								<li>pc,태블릿, 모바일 사이즈 <em>반응형</em>으로 제작했습니다.</li>
+							</ul>
+							<span> - 제작기간 : 2023.06.25 ~ 07.03</span>
+							<button class="close__btn">close</button>
+						</div>
+					</div>
+				</div>
+				<!-- 모달창 1번 -->
+				<div class="modal__wrap" id="myModal2">
+					<div class="modal__body">
+						<h2>skinfood page</h2>
+						<div class="modal__content">
+							<ul>
+								<li>기존에 있던 스킨푸드 홈페이지를 <em>리디자인 + 퍼블리싱</em>을 완료했습니다.</li>
+								<li>
+									총 <em>5가지 페이지</em>를 확인하실 수 있습니다.<br />
+									- 메인페이지, 베스트상품(미나리패드), 커뮤니티, 어바웃스킨푸드
+								</li>
+								<li>pc, 모바일 사이즈로 제작했습니다.</li>
+							</ul>
+							<span> - 제작기간 : 2023.03 ~ 2023.04</span>
+							<button class="close__btn">close</button>
+						</div>
+					</div>
+				</div>
+				<!-- 모달창 2번 -->
+				<div class="modal__wrap" id="myModal3">
+					<div class="modal__body">
+						<h2>minimal-site</h2>
+						<div class="modal__content">
+							<ul>
+								<li>디자인 데모사이트를 보고 퍼블리싱 하였습니다.</li>
+								<li><em>gsap ScrollTrigger, Isotope, AOS.js</em>등 동적인 요소를 보여주는 라이브러리 사용으로 많이 들어간 사이트입니다.</li>
+								<li>
+									총 <em>5가지 페이지</em>를 확인하실 수 있습니다.<br />
+									- 우측상단 햄버거바를 누르면 6개의 페이지 이동 가능
+								</li>
+							</ul>
+							<span> - 제작기간 : 2023.02 ~ 2023.03</span>
+							<button class="close__btn">close</button>
+						</div>
+					</div>
+				</div>
+				<!-- 모달창 3번 -->
+				<div class="modal__wrap" id="myModal4">
+					<div class="modal__body">
+						<h2>첫번째 포트폴리오</h2>
+						<div class="modal__content">
+							<ul>
+								<li>첫번째 포트폴리오로 <em>Vue3</em>를 이용하여 제작했습니다.</li>
+								<li>반응형사이트이며 <em>다크모드</em>도 같이 작업했습니다.</li>
+							</ul>
+							<span> - 제작기간 : 2022.08 ~ 2022.09</span>
+							<button class="close__btn">close</button>
+						</div>
+					</div>
+				</div>
+				<!-- 모달창 4번 -->
+				<div class="modal__wrap" id="myModal5">
+					<div class="modal__body">
+						<h2>movie serach site</h2>
+						<div class="modal__content">
+							<ul>
+								<li>패스트캠퍼스 강의를 들으며 구현한 사이트입니다.</li>
+								<li>Vue3로 작업하였고,<em>OMDB웹사이트 API</em>를 가져와 <em>영화 데이터를 요청하고 받아서 프로젝트에서 출력</em>하는 작업을 진행했습니다.</li>
+							</ul>
+							<span> - 제작기간 : 2023.02 ~ 2023.04</span>
+							<button class="close__btn">close</button>
+						</div>
+					</div>
+				</div>
+				<!-- 모달창 5번 -->
+			</div>
+			<!-- E:MORE modal -->
+		</section>
+		<!-- E:PORTFOLIO -->
+		<section class="contact">
+			<div class="inner">
+				<div class="title">
+					<p class="contact-tit">Thank you for visiting my portfolio!</p>
+					<p class="contact-tit-p">모든 문의는 환영입니다!</p>
+				</div>
+				<div class="infor">
+					<div>
+						<div class="email">
+							<i class="fas fa-mail-bulk"></i>
+							<a href="mailto:wlsdl950@gmail.com" data-cursor-class="link-grow">wlsdl950@gmail.com</a>
+						</div>
+						<div class="github">
+							<i class="fa-brands fa-github"></i>
+							<a href="https://github.com/d2nst" target="_blank" data-cursor-class="link-grow">github/d2nst</a>
+						</div>
+					</div>
+					<div class="kakaotalk">
+						<img src="./assets/images/chat-qr.png" alt="카카오톡 오픈채팅 QR" />
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- E:CONTACT -->
 
-    <section class="information">
-      <div class="inner">
-        <h2 class="info">Info</h2>
-        <div class="info-career">
-          <img src="./assets/images/d2n.png" alt="프로필 이미지" class="info-img" />
-          <ul class="career-list">
-            <li class="career-item">
-              <h3 class="career-title">경력</h3>
-              <span class="career-date">2023.09.01 - 현재</span>
-              <h4 class="career-company">(주)포엔</h4>
-              <span class="career-role">S/W Biz팀 - 웹퍼블리싱 및 프론트엔드</span>
-              <ul class="project-list">
-                <li>배터리 재제조 이력시스템
-                  <ul class="list-item">
-                    <li> - 재제조현황 대시보드 화면 구현</li>
-                    <li> - 화면 유지보수</li>
-                    <li> - 반응형 작업</li>
-                  </ul>
-                </li>
-                <li>배터리 진단 시스템
-                  <ul class="list-item">
-                    <li> - 기획 및 데모 사이트 디자인 퍼블리싱</li>
-                    <li> - 프로젝트 WBS 작성 및 업체 선정 및 조율 계약 연락</li>
-                    <li> - 현재 테스트 중. 2025년 하반기 배포 예정</li>
-                  </ul>
-                </li>
-                <li> - 데이터 분석 자동화 웹사이트 기획 및 UI 정의</li>
-                <li> - 사내 홈페이지 디자인 및 유지보수</li>
-              </ul>
-            </li>
-            <li class="career-item">
-              <h3 class="career-title">자격증</h3>
-              <ul class="project-list">
-                <li>GTQ 1급</li>
-                <li>웹디자인자격증</li>
-              </ul>
-            </li>
-            <li class="career-item">
-              <h3 class="career-title">교육</h3>
-              <span class="career-date">2022.01.01 - 2023.08.31</span>
-              <span class="career-role">UI/UX 퍼블리싱</span>
-              <ul class="project-list">
-                <li>라인컴퓨터 아카데미</li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <section class="project">
-      <div class="container"></div>
-    </section>
-
-    <section class="contact"></section>
-  </main>
-
+		<footer class="footer">
+			<div class="footer">
+				<div class="footer-text">
+					<p>Copyright &copy; <span class="this-year"></span>. Kim kyoungjin. All right reserved.</p>
+					<p>본 페이지는 상업적으로 사용하지 않는 개인 포트폴리용 페이지 입니다.</p>
+				</div>
+			</div>
+		</footer>
+		<!-- E:FOOTER -->
+	</main>
 </body>
 
 </html>
