--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
 	<title>포트폴리오 | 웹퍼블리셔 김경진</title>
 
 	<!-- favicon -->
+	<link rel="apple-touch-icon" sizes="57x57" href="./favicon.ico/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="./favicon.ico/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="./favicon.ico/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="./favicon.ico/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="./favicon.ico/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="./favicon.ico/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="./favicon.ico/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="./favicon.ico/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="./favicon.ico/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="./favicon.ico/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./favicon.ico/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="./favicon.ico/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./favicon.ico/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 	<!-- CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
@@ -39,7 +56,7 @@
 				<div class="visual-introwrap">
 					<ul class="visual-list">
 						<li class="list-item">web</li>
-						<li class="list-item">publisher</li>
+						<li class="list-item pl">publisher</li>
 						<li class="list-item">kimkyoungjin</li>
 					</ul>
 					<div class="visual-imgwrap">
@@ -105,17 +122,17 @@
 									<li class="list-title">
 										배터리 재제조 이력시스템
 										<ul class="list-item">
-											<li>- 재제조현황 대시보드 화면 구현</li>
-											<li>- 화면 유지보수</li>
-											<li>- 반응형 작업</li>
+											<li>- 재제조 공정 데이터 시각화를 위한 대시보드 UI 설계 및 퍼블리싱</li>
+											<li>- 반응형 웹 구현</li>
+											<li>- 사용자 편의성 개선을 위한 UI 유지보수 및 기능 개선</li>
 										</ul>
 									</li>
 									<li class="list-title">
 										배터리 진단 시스템
 										<ul class="list-item">
-											<li>- 기획 및 데모 사이트 디자인 퍼블리싱</li>
-											<li>- 프로젝트 WBS 작성 및 업체 선정 및 조율 계약 연락</li>
-											<li>- 현재 테스트 중. 2025년 하반기 배포 예정</li>
+											<li>- 프로젝트 기획 및 UI/UX 설계</li>
+											<li>- 프로젝트 일정 수립 및 WBS 작성, 외주 업체 선정 및 계약 조율</li>
+											<li>- 시스템 프로토타입 테스트 진행 중 (2025년 하반기 배포 예정)</li>
 										</ul>
 									</li>
 									<li class="list-title">데이터 분석 자동화 웹사이트 기획 및 UI 정의</li>
