--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="./favicon.ico/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="./favicon.ico/favicon-96x96.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="./favicon.ico/favicon-16x16.png">
-	<link rel="manifest" href="/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
@@ -57,7 +56,7 @@
 					<ul class="visual-list">
 						<li class="list-item">web</li>
 						<li class="list-item pl">publisher</li>
-						<li class="list-item">kimkyoungjin</li>
+						<li class="list-item">kyoungjin</li>
 					</ul>
 					<div class="visual-imgwrap">
 						<p class="visual-desc">
